--- a/styles/main.scss
+++ b/styles/main.scss
@@ -34,22 +34,23 @@ body {
   }
 }
 
+/* using important here to override the default heading styles from sass */
 h1, h2, .heading {
-  font-family: Montserrat, sans-serif;
+  font-family: Montserrat, sans-serif !important;
   font-weight: 600;
   font-size: 36px;
   margin: 1rem 0;
 }
 
 h3, h4, .sub-heading {
-  font-family: Lora, serif;
+  font-family: Lora, serif !important;
   font-weight: 500;
   font-size: 30px;
   margin: 1rem 0;
 }
 
 h5, h6, .paragraph-section {
-  font-family: Nunito, sans-serif;
+  font-family: Nunito, sans-serif !important;
   font-weight: 500;
   font-size: 20px;
   font-style: italic;
@@ -58,7 +59,7 @@ h5, h6, .paragraph-section {
 }
 
 p, .paragraph {
-  font-family: Nunito, sans-serif;
+  font-family: Nunito, sans-serif !important;
   font-weight: 400;
   font-size: 16px;
 }
