--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,7 +1,29 @@
 <footer>
-  <h6>Smart ToDo App</h6>
-  <p>Some Link</p>
-  <p>Some Link</p>
-  <p>Some Link</p>
-  <p>Some Link</p>
+  <div class="left-side">
+    <h6>Smart ToDo App</h6>
+    <p>Some Link</p>
+    <p>Some Link</p>
+    <p>Some Link</p>
+    <p>Some Link</p>
+  </div>
+
+  <div class="right-side">
+    <h2>CONNECT WITH US!</h2>
+    <div class="icons">
+        <!-- Wrap each icon in an anchor tag -->
+        <a href="mailto:someone@example.com" target="_blank">
+            <i class="fa-solid fa-envelope"></i>
+        </a>
+        <a href="https://x.com/emrata?lang=en" target="_blank">
+            <i class="fa-brands fa-twitter"></i>
+        </a>
+        <a href="https://www.facebook.com/Officialemilyratajkowski/" target="_blank">
+            <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href="https://www.instagram.com/emrata/" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+    </div>
+    <h3>Light House Lab</h3>
+  </div>
 </footer>
