--- a/styles/quick-add.scss
+++ b/styles/quick-add.scss
@@ -3,16 +3,36 @@
   h1 {
     margin-bottom: 24px;
   }
+
   form {
     width: 100%;
     height: min-content;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     gap: 16px;
 
+    margin-bottom: 2rem;
+
+    :nth-child(1) {
+      flex-grow: 10;
+    }
+    :nth-child(2) {
+      flex-grow: 1;
+    }
+    :nth-child(3) {
+      flex-grow: 1;
+    }
+
+    label {
+      display: block;
+    }
+    input {
+      width: 100%;
+    }
+
     .task-name {
-      width: 75%;
       border: 2px solid #aaa7a7;
       border-radius: 32px;
       padding: 0 1rem;
@@ -22,10 +42,11 @@
     .select-list {
       border-radius: 32px;
       border: 2px solid #aaa7a7;
-      padding: 0 1rem;
+      padding: 0.25rem 1rem;
       cursor: pointer;
+      width: 100%;
 
-      optgroup{
+      optgroup {
         padding: 1rem;
         margin-top: 1rem;
       }
@@ -33,6 +54,15 @@
 
     button {
       flex-shrink: 0;
+      align-self: flex-end;
     }
+  }
+
+  .display-api-info {
+    display: flex;
+    width: 100%;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
   }
 }
