--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,3 @@
-<!--
-name of this file starts with an underscore (_).
-This is to signify that it's a partial, in this case, a header partial.-->
-
 <header>
     <nav class="navbar navbar-expand-md navbar-light">
         <a class="navbar-brand" href="/">Smart TODO</a>
@@ -16,11 +12,16 @@ This is to signify that it's a partial, in this case, a header partial.-->
         >
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="/todos">To Dos</a>
+                <a class="nav-item nav-link" href="/todos">All To-Dos</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
             </div>
-            <div class="navbar-nav ml-auto">
+            <div class="form-inline ml-auto">
                 <% if (user) { %>
                     <span class="navbar-text mr-3">Logged in as: <%= user.email %>!</span>
                     <form class="form-inline" action="/auth/logout" method="POST">
