--- a/views/partials/todo_input_form.ejs
+++ b/views/partials/todo_input_form.ejs
@@ -1,4 +1,3 @@
-
 <!--This is the Input form for user.
 The category is announced after the item name is inputted.
 It is displayed in a dropdown for manual changes if neede.
@@ -6,38 +5,57 @@ It is displayed in a dropdown for manual changes if neede.
 How: add Javascript to make an API call
 -->
 
+<!-- <form>
+          <input class="task-name" type="text" placeholder="What do you need to do?" />
+          <select class="select-list" name="lists">
+              <optgroup label="Add to list">
+                <option value="" selected disabled hidden>Add to list</option>
+                <option value="create new list">+ Create a new list</option>
+              </optgroup>
+          </select>
+          <button class="default-btn" type="submit">+ Add ToDo</button>
+        </form> -->
+
 <form id="todoForm" action="/api/todo/categorize" method="POST">
-    <div class="mb-3">
-        <label for="itemName" class="form-label">Quick Add A ToDo</label>
-        <div class="input-group">
-            <input type="text" class="form-control rounded" id="itemName" name="itemName" placeholder="What are we doing?" required>
+  <span class="inout-textbox">
+    <label for="itemName" class="form-label">Add a To-Do</label>
+    <input
+      type="text"
+      class="form-control task-name"
+      id="itemName"
+      name="itemName"
+      placeholder="What do you want to remember to do?"
+      required
+    />
+  </span>
+  
 
-            <button type="submit" class="btn btn-dark" >
-                <i class="fa-solid fa-magnifying-glass"></i>
-                Search
-            </button>
-        </div>
-    </div>
+  <!-- Category announcement and manual change dropdown -->
+  <span>
+    <label for="categoryDropdown">Add to List:</label>
+    <select id="categoryDropdown" name="category" class="select-list">
+      <option value="ToWatch">Watchlist</option>
+      <option value="ToEat">Restaurants</option>
+      <option value="ToRead">Books</option>
+      <option value="ToBuy">Products</option>
+      <option value="Uncategorized">Uncategorized</option>
+    </select>
+  </span>
 
-    <!-- Category announcement and manual change dropdown -->
-    <div class="mt-3">
-        <label>This will be added to:</label>
-        <select id="categoryDropdown" name="category" class="form-select">
-            <option value="ToWatch">Watchlist</option>
-            <option value="ToEat">Restaurants</option>
-            <option value="ToRead">Books</option>
-            <option value="ToBuy">Products</option>
-            <option value="Uncategorized">Uncategorized</option>
-        </select>
-    </div>
+  <button type="submit" class="default-btn">
+    <i class="fa-solid fa-magnifying-glass"></i>
+    Search
+  </button>
 </form>
 
-<button id= "confirm-choice-button" type="submit" class="btn btn-dark" >
-    <i class="fa-solid fa-magnifying-glass"></i>
-    Confirm
-</button>
-
 <!-- Add a section to display the information -->
-<div id="displayInformation">
-    <h6>This is display info</h6>
-</div>
+ <span class="display-api-info">
+     <div id="displayInformation">
+       <h6>This is display info</h6>
+     </div>
+     
+     <button id="confirm-choice-button" type="submit" class="default-btn">
+       Confirm
+     </button>
+ </span>
+
