styled forms (filter and create)

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -104,6 +104,9 @@ p, .paragraph {
 
 #display-tasks {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .error-container {
