--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -33,3 +33,9 @@ main {
   justify-content: center;
   gap: 16px;
 }
+
+.content-plus-filter {
+  display: grid;
+  grid-template-columns: 30% 70%;
+  margin-bottom: 2rem;
+}
