--- a/views/includes.ejs
+++ b/views/includes.ejs
@@ -15,6 +15,12 @@ Just drop this in the <head> tag at the top of each HTML Page
 <link rel="stylesheet" href="/styles/navbar.css" />
 <link rel="stylesheet" href="/styles/hero.css" />
 <link rel="stylesheet" href="/styles/quick-add.css" />
+<link rel="stylesheet" href="/styles/filter.css" />
+
+<!-- JS Scripts -->
+<script src="/vendor/jquery-3.0.0.js"></script>
+<script defer src="/scripts/app.js"></script>
+<!-- <script defer src="/scripts/complete-task.js"></script> -->
 
 <!-- Bootstrap CSS -->
 <link
@@ -27,10 +33,7 @@ crossorigin="anonymous"
 <!-- FontAwesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<!-- JS Scripts -->
-<script src="/vendor/jquery-3.0.0.js"></script>
-<script defer src="/scripts/app.js"></script>
-<!-- <script defer src="/scripts/complete-task.js"></script> -->
+
 
 <!-- Favicon -->
 <link rel="icon" type="image/x-icon" href="/assets/flower-icon.png">
