--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
           <% 
           if(lists.length > 0){ 
             for(const list of lists) { %>
-              <%- include('partials/_todo-list-card', {listName: list.name, listIcon: '/assets/flower-icon.png'}) %>
+              <%- include('partials/_todo-list-card', {listName: list.name, listIcon: 'flower-icon.png'}) %>
           <% }
            } else { %>
               <%- include('partials/_todo-list-card', {listName: 'Creat A New List', listIcon: 'https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png'}) %>
