--- a/views/partials/_task-item.ejs
+++ b/views/partials/_task-item.ejs
@@ -1,5 +1,5 @@
 <div class="todo-item">
-  <div class="todo-item-card <%= completed ? 'completed-item' : '' %>">
+  <a class="todo-item-card <%= completed ? 'completed-item' : '' %>">
     <div class="todo-item-info">
       <form action="" method="POST">
         <button
@@ -17,5 +17,5 @@
       </div>
     </div>
     <i class="fa-solid fa-chevron-right"></i>
-  </div>
+  </a>
 </div>
