--- a/views/partials/_todo-list-card.ejs
+++ b/views/partials/_todo-list-card.ejs
@@ -1,4 +1,4 @@
-<a href="/todos/<%- listName %>" class="todo-list-card">
+<a href="/lists/<%- listName %>" class="todo-list-card">
   <div class="square-card">
     <img
       src="<%- listIcon -%>"
