--- a/styles/filter.scss
+++ b/styles/filter.scss
@@ -13,12 +13,16 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-    
+
     span {
       width: 100%;
 
       select {
         width: 100%;
+        border-radius: 32px;
+        border: 2px solid #aaa7a7;
+        padding: 0.25rem 1rem;
+        cursor: pointer;
       }
     }
   }
