added the icons and made them available for dynamic lists

--- a/views/partials/_todo-list-card.ejs
+++ b/views/partials/_todo-list-card.ejs
@@ -1,7 +1,7 @@
 <a href="/lists/<%- listName %>" class="todo-list-card">
   <div class="square-card">
     <img
-      src="<%- listIcon -%>"
+      src="/assets/icons/<%- listIcon -%>"
     />
   </div>
   <span class="paragraph"><%- listName %> →</span>
