database and error container

--- a/views/partials/todo_input_form.ejs
+++ b/views/partials/todo_input_form.ejs
@@ -48,3 +48,6 @@ How: add Javascript to make an API call
     + Add Task
   </button>
 </span>
+
+<!--item already exists -->
+<div class="error-container"></div>
