show details of todo

--- a/views/includes.ejs
+++ b/views/includes.ejs
@@ -16,6 +16,7 @@ Just drop this in the <head> tag at the top of each HTML Page
 <link rel="stylesheet" href="/styles/hero.css" />
 <link rel="stylesheet" href="/styles/quick-add.css" />
 <link rel="stylesheet" href="/styles/filter.css" />
+<link rel="stylesheet" href="/styles/task-display.css" />
 
 <!-- JS Scripts -->
 <script src="/vendor/jquery-3.0.0.js"></script>
