--- a/views/view-tasks-list.ejs
+++ b/views/view-tasks-list.ejs
@@ -70,7 +70,9 @@
           </form>
         </span>
 
-        <section id="display-tasks"></section>
+        <section id="display-tasks">
+          <h3>No To-Dos here!</h3>
+        </section>
       </div>
     </main>
     <%- include('partials/_footer') %>
