--- a/views/partials/todo_input_form.ejs
+++ b/views/partials/todo_input_form.ejs
@@ -33,7 +33,7 @@ How: add Javascript to make an API call
     <i class="fa-solid fa-magnifying-glass"></i>
     Search
   </button>
-  <button id="manualChangeButton" class="btn btn-warning-outline" type="submit">
+  <button id="manualChangeButton" class="default-btn btn-no-bg" type="submit">
     Confirm Change
   </button>
 </form>
